// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertComponent should render listOfActivities when showTable true - english 1`] = `
<div
  class="ui-lib-viewport ui-lib-viewport_lg"
>
  <div
    class="alert-container"
  >
    <div
      class="ui-lib-alert ui-lib-alert_info"
    >
      <svg
        class="ui-lib-alert__icon ui-lib-icon"
        data-key=""
        height="24"
        tabindex="0"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <path
          d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
        />
      </svg>
      <div
        class="ui-lib-alert__message"
      >
        alertText
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertComponent should render listOfActivities when showTable true - english 2`] = `
<div
  class="ui-lib-viewport ui-lib-viewport_lg"
>
  <div
    class="alert-container"
  >
    <div
      class="ui-lib-alert ui-lib-alert_info"
    >
      <svg
        class="ui-lib-alert__icon ui-lib-icon"
        data-key=""
        height="24"
        tabindex="0"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <path
          d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
        />
      </svg>
      <div
        class="ui-lib-alert__message"
      >
        alertText
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertComponent should render listOfActivities when showTable true - english 3`] = `
<div
  class="ui-lib-viewport ui-lib-viewport_lg"
>
  <div
    class="alert-container"
  >
    <div
      class="ui-lib-alert ui-lib-alert_info"
    >
      <svg
        class="ui-lib-alert__icon ui-lib-icon"
        data-key=""
        height="24"
        tabindex="0"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <path
          d="M12,0A12,12,0,1,0,24,12,12.013,12.013,0,0,0,12,0Zm.25,5a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,12.25,5ZM14.5,18.5h-4a1,1,0,0,1,0-2h.75a.25.25,0,0,0,.25-.25v-4.5a.25.25,0,0,0-.25-.25H10.5a1,1,0,0,1,0-2h1a2,2,0,0,1,2,2v4.75a.25.25,0,0,0,.25.25h.75a1,1,0,1,1,0,2Z"
        />
      </svg>
      <div
        class="ui-lib-alert__message"
      >
        errorMessage.noData.category
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertComponent should render listOfActivities when showTable true - english with error 1`] = `
<div
  class="ui-lib-viewport ui-lib-viewport_lg"
>
  <div
    class="alert-container"
  >
    <div
      class="ui-lib-alert ui-lib-alert_error"
    >
      <svg
        class="ui-lib-alert__icon ui-lib-icon"
        data-key=""
        height="24"
        tabindex="0"
        version="1.1"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title />
        <path
          d="M20.488,3.515a11.994,11.994,0,1,0,0,16.97A12.014,12.014,0,0,0,20.488,3.515ZM16.709,15.279A1,1,0,0,1,15.3,16.694l-3.11-3.11a.252.252,0,0,0-.354,0l-3.109,3.11a1.019,1.019,0,0,1-1.415,0,1,1,0,0,1,0-1.415l3.11-3.109a.249.249,0,0,0,0-.353l-3.11-3.11A1,1,0,0,1,8.722,7.292l3.109,3.11a.25.25,0,0,0,.354,0l3.11-3.11a1,1,0,0,1,1.414,1.415l-3.11,3.11a.25.25,0,0,0,0,.353Z"
        />
      </svg>
      <div
        class="ui-lib-alert__message"
      >
        alertText
      </div>
    </div>
  </div>
</div>
`;
